# ebaypricer

./: .env  .env.example  .gitignore  README.md  active_listings.txt  api.py  cards_to_track.txt  config.py  db.py  ebay_pull.py  gen_access_token.py  main.py  package-lock.json  package.json  pokemon_prices.db  price_report.json  pull_active.py  pyproject.toml  report.py  requirements.txt
.opencode/plans/: auto_boost_promotion.md
api/: server.py
ebay-defaults-extension/: README.md  content.js  defaults.js  manifest.json  popup.css  popup.html  popup.js
ebaypricer/: api.py  config.py  db.py  models.py  report.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/pages/: CardDetail.jsx  Dashboard.jsx
scripts/: append_sold_orders.py  auto_boost_promotion.py  avg_active_price.py  check_pricing.py  csv_report.py  gen_access_token.py  get_active.py  get_prices.py  get_sold_from_CSV.py  main.py  pokemon_cards.py  price_active_listings.py  pull_active.py  run_daily.sh  run_hourly.ps1  run_hourly.sh  sold_api.py
src/ebaypricer/: __init__.py  api_counter.py  auth.py  browse_api.py  cards.py  excel.py  finances.py  marketing_api.py  paths.py  trading_api.py
