[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ebaypricer"
version = "1.0.0"
description = "eBay sold order tracking and Pokemon card pricing"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "rapidfuzz>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
